[tool.poetry]
name = "applecart"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.22.2"
PyYAML = "^6.0"
umsgpack = "^0.1.0"
zmq = "^0.0.0"
matplotlib = "^3.5.1"
meshcat = "^0.3.2"
pydot = "^1.4.2"
pygame = "^2.1.2"
scipy = "^1.8.0"
ipywidgets = "^7.6.5"
timeout-decorator = "^0.5.0"
gradescope-utils = "^0.4.0"
mpld3 = "^0.5.7"
altair = "^4.2.0"
pandas = "^1.4.1"
pytest-plt = "^1.1.0"
pytest-xdist = "^2.5.0"
black = {extras = ["jupyter"], version = "^22.3.0"}
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
pytest = "^7.1.2"
black = {version = "^22.1.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
